- cli/cmdmain.c: Display blank line after welcome message. (RFB)

2013-06-03
- doc/resource.txt doc/todo.txt: Minor documentation updates and
  corrections. (RFB)
- doc/announce.txt: Updated for release 0.9.1. (RFB)

2013-06-04
- po/cs.po: Updated Czech translation. Contributed by Pavel Salač. (VRI)

2013-06-05
- doc/*: Updated. (VRI)

2013-06-08
- bios/vt52.c: Fixed compilation when !CONF_SERIAL_CONSOLE_ANSI. (VRI)

2013-06-13
- bios/ikbd.c: More accurate comment about IKBD reset. (VRI)

2013-06-16
- doc/announce.txt: Updated. Contributed by Eero Tamminen. (VRI)
- bios/linea.S: On unimplemented Line-A function, display a debug trace instead
  of calling panic(). Suggested by David Savinkoff. (VRI)

2013-06-19
- cli/cmdint.c: Fix panic when 'echo'ing control character. (RFB)
- cli/cmdint.c: Remove the internal command 'rem'. (RFB)
- cli/cmdint.c cli/cmdutil.c: Small optimisation for eol handling. (RFB)
- cli/cmd.h cli/cmdint.c cli/cmdutil.c: Moved output() and friends to
  make them private functions. (RFB)
- cli/cmdint.c: Allow interruption and flow control for output of 'ls'
  and 'copy/move'. (RFB)

2013-06-20
- bios/disk.c: Changed byteswap message. (VRI)
- bios/ikbd.c: Added scancode emulation for EmuCON2 on serial console. (VRI)

2013-06-21
- bdos/mem.h bdos/osmem.c doc/osmemory.txt: Fix regression: Malloc()
  should not cause a halt() due to lack of internal memory. (RFB)

2013-06-23
- Makefile: Added support for "make ramtos.dsm". (VRI)
- util/bootasm.S: Fixed memory corruption due to bad stack in boot.prg. (VRI)
- bios/bios.c: Hide the cursor after system halted. (VRI)

2013-06-24
- *: Updated copyright year for files modified since last release. (VRI)

2013-06-25
- *: Stripped trailing spaces. (VRI)

2013-07-03
- doc/announce.txt: Updated release date. (VRI)

* Release: 0.9.1

2013-07-29
- vdi/vdi_line.c: Speed up rectangle draw by eliminating locals. (RFB)
- vdi/vdi_defs.h vdi/vdi_fill.c vdi/vdi_line.c: Static cleanup. (RFB)